languages/io-automaton-fe/src/test/resources/invalid/UnreachableState.ioautomaton
package invalid;

automaton UnreachableState{
    input int a;
    output int b;
    
    state A,B,C,D,E,F,G,H,I,J;
    
    initial A,B;
    
    A->C;
    C->D;
    C->F;
    B->E;
    F->G;
    J->A;    

}